themes/locize-theme/source/css/theme/header.styl
header
	background: $primary-dark
	border-bottom: 1px solid rgba(0,0,0,.1)
	box-shadow: 0 1px 1px 0 rgba(0,0,0,.1)
	overflow: hidden
	position: fixed
	width: 100%
	z-index: 1000

	.wrapper
		height: 60px
		align-items: center
		display: flex
		flex-direction: row
		-webkit-justify-content: space-between
		-ms-flex-pack: justify
		justify-content: space-between

		.brand
			display: inline-block
			width: 120px
			height: 35px

		a
			color: $text-light
			text-decoration: none

			&:active, &:visited
				color: $text-light

		nav
			color: $text-light
			font-size: 1em
			font-weight: 600
			height: 60px

			ul, .okayNav__nav--invisible
				margin: -1px 0 0 0
				padding: 0

				li
					text-transform: uppercase

					a
						line-height: 60px
						color: $text-light
						background: transparent
						font-size: .8em
						font-weight: 600
						display: block
						letter-spacing: 1px
						padding: 0 24px
						text-decoration: none
						text-shadow: 0 1px 1px rgba(0,0,0,.1)

						&:active, &:visited, &:hover
							color: $text-light


		.okayNav__menu-toggle
			margin-top: 4px
			position: relative

			span
				background: #fff

		.okayNav__nav--invisible
			top: 62px
			background-color: $primary-dark

nav > ul > li.active > a,
nav > ul > li.logo > a {
	color: rgba(255,255,255,1);
}

nav > ul > li:not([class="active"]):hover {
	background-color: rgba(0,0,0,.1);
}

